{
    "name": "CraneControls",
    "maps": [
        {
            "name": "Action map",
            "id": "38de36aa-2a56-493e-b180-1dd33fe18e9c",
            "actions": [
                {
                    "name": "RailsMovement",
                    "type": "Value",
                    "id": "9547cf03-2e96-4e0c-b6e6-0e6d6994066b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ArrowMovement",
                    "type": "Value",
                    "id": "a66f2b70-62f8-46cf-ae41-a85f18839e0d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotationMovement",
                    "type": "Value",
                    "id": "66e6e2b0-6b34-463c-b42d-15228c661e5e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RopeLengthChanging",
                    "type": "Value",
                    "id": "3fb7ceee-ce85-4db8-a90e-4113b531a2f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "KeyOn",
                    "type": "Value",
                    "id": "bde8a125-7a13-4ab7-97a2-1b9ba89ba2d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "KeyOff",
                    "type": "Value",
                    "id": "1fe76eb0-6f17-4388-94d7-42cd16cb999f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCargo",
                    "type": "Value",
                    "id": "f376cbc2-b313-4134-9caf-025f7b324390",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpreaderMovement",
                    "type": "Value",
                    "id": "709b5b1c-1263-4951-85b3-ffcb728256b5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpreaderGrab",
                    "type": "Value",
                    "id": "6c8f0afe-f318-4c4c-9492-b2e403d99eb0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShowOGP",
                    "type": "Value",
                    "id": "d4a1ca93-60e1-44ad-bf11-8043fd82b3c6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpreaderRelease",
                    "type": "Value",
                    "id": "5b170469-f08e-4843-82ac-56186779d115",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "F1Camera",
                    "type": "Value",
                    "id": "8d2796d5-b3e8-4804-8ec6-066c9ee3f2c0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "F2Camera",
                    "type": "Value",
                    "id": "25b25e83-b029-459a-bc2f-a595ce456e3b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "F3Camera",
                    "type": "Value",
                    "id": "349e0db8-9e3e-4bd1-8fd7-c9ed40c50c7a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "F4Camera",
                    "type": "Value",
                    "id": "2092375b-9c54-4b59-99d7-2d55002dcee9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "F5Camera",
                    "type": "Value",
                    "id": "a63d1ce7-0a80-4b17-a444-ff57a3a5cb62",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Value",
                    "id": "f9094252-988b-45f6-b97a-af5fa7c935c0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WorkOn",
                    "type": "Value",
                    "id": "22871cc5-1441-4284-9f7f-9aae07342131",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WorkOff",
                    "type": "Value",
                    "id": "b2736ba8-7a26-4e4e-9365-16f4c7e18edc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FirstSpeed",
                    "type": "Value",
                    "id": "2163f7e7-d975-43a5-8c8e-0bb76503bb54",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondSpeed",
                    "type": "Value",
                    "id": "6b385e56-b073-4308-b96b-8b9a13137cc5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThirdSpeed",
                    "type": "Value",
                    "id": "e1a42024-7eeb-45e2-b8ef-c08c0c363aae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EmergencyStop",
                    "type": "Value",
                    "id": "7957a9a3-dd62-4d6e-bf41-527a259e16a3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestLEDs",
                    "type": "Value",
                    "id": "af57d9e2-c766-449f-89a3-df91be270f12",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "A/D",
                    "id": "51b08963-dfae-4db5-8066-37a35595a03f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RailsMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "W/S",
                    "id": "0cf8d6a3-ee1d-430e-a749-ad5423ca1787",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Num46",
                    "id": "5fc4de4d-b3b5-44af-8441-5e0b4444ce16",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7a6c6db1-58ed-41b2-9ad1-a2dd633b5754",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button64",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "147f73ad-f652-424f-ba91-c1803e1624ad",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button63",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Num82",
                    "id": "6a652540-9bf3-457e-8175-050546517c52",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RopeLengthChanging",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5790dfde-e6b1-48e6-ab47-e4957de8bd14",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button14",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Num7/9",
                    "id": "fcb40d97-5800-42ff-88ce-201ebbe37a88",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCargo",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Num1/3",
                    "id": "1a8cb2b8-32df-4a34-afb9-65eca36b8024",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpreaderMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adcbfd82-584e-49ac-974e-789e01e1d315",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpreaderGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1c46fe0-2e5f-4535-98b1-ade8a5d4abcb",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowOGP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c399d9df-31d7-4bc3-aace-689c6cc87139",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button12",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpreaderRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b488883c-3369-41e0-a666-fac86bed2065",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "F1Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba4239e-6a29-44a9-9a77-d1558d05591d",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "F2Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53929e6c-60c8-41ca-b039-43022f0f15a4",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "F3Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c496d0d4-78f8-4919-8c4e-591637142f04",
                    "path": "<Keyboard>/f4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "F4Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90f3cedd-e0ce-4562-9f11-db52217e0a5f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfb17537-4e8f-4f2c-af55-ca1ed833b28d",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WorkOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ef5cb81-c4d2-426b-8dd0-b0e236200241",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button11",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WorkOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6180c124-7506-4853-8821-c263f5915017",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button28",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc7c8a7a-2fc5-4400-8734-dec1691e1495",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button25",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bfbd46a-2539-4a5c-b94b-4c6ddce2de69",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button26",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThirdSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3767ac02-269c-452f-8922-a8e9d8a9c477",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button27",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EmergencyStop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a9bc62b-ed17-4c4e-83ba-0207c41a711c",
                    "path": "<HID::Shaul Eizikovich vJoy - Virtual Joystick>/button13",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestLEDs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd7d03c6-170a-4df3-b6a7-5e7707afb52d",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "F5Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": []
        }
    ]
}